--- a/setup.properties
+++ b/setup.properties
@@ -1,6 +1,11 @@
-app.user=company
-app.password=company
-app.location=C\:\\Program Files (x86)\\Experitest\\SeeTest\\bin\\ipas
+#Device Specification
+device.type=android
+device.name=adb:Lenovo P780
+device.host=127.0.0.1
+device.port=8889
+#App Specification
 app.install.onInit=false
+app.location=C\:\\Program Files (x86)\\Experitest\\SeeTest\\bin\\ipas
+app.package=com.experitest.ExperiBank
+app.lauchActivity=com.experitest.ExperiBank/.LoginActivity
 project.base.directory=\\seeTestProject
-data.spreadsheet.name=data.xls
